--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,8 @@ Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 Style/GuardClause:
   Enabled: false
+Style/DoubleNegation:
+  Enabled: false
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
